# Nifti_Clib_Wrapper

./: CMakeLists.txt  znzlib.c  znzlib.h  znzlib_version.h
Source/: nifti1.h
Source/nifti_clib/: nifti1_io.c  nifti1_io.h  nifti1_io_version.h
